[package]
name = "pnetlink"
version = "0.0.3"
authors = ["Alexander Polakov <plhk@sdf.org>"]
build = "build.rs"
description = "Netlink library in pure rust"
repository = "https://github.com/polachok/pnetlink"
readme = "README.md"
keywords = ["netlink", "pnet", "linux", "network"]
license = "MIT"
documentation = "https://docs.rs/pnetlink/"

[dependencies]
rand = "0.7"
bitflags = "1.2"
byteorder = "1.3"
bytes = "0.5"
futures = "0.3"
libc = "0.2"
mio = "0.6"
pnet = "0.26"
pnet_macros_support = "0.26"
pnet_packet = "0.26"
tokio = { version = "1.8", features = [ "io-util", "net" ] }
tokio-util = { version = "0.2", features = [ "codec" ] }

[build-dependencies]
pnet_macros = "0.26"
syntex = "0.42"

[dev-dependencies]
tokio = { version = "1.8", features = [ "io-util", "net", "rt-multi-thread" ] }
